# MVC_MODULES_REST_QT_QML

./: CMakeLists.txt  Main.qml  main.cpp
Controllers/: MainController.cpp  MainController.h
ModuloComponentes/: CMakeLists.txt
ModuloComponentes/Genericos/: IOverlay.qml
ModuloComponentes/Graficos/ItensGraficos/: IHorizontalStackedBarSeries.qml
ModuloConstantes/: CMakeLists.txt  Constantes.qml
ModuloMatriculas/: CMakeLists.txt  Test.qml
ModuloPedagogico/: CMakeLists.txt
ModuloPedagogico/Controllers/: TestController.cpp  TestController.h
ModuloPedagogico/Models/: TestModel.cpp  TestModel.h
Utils/: RestAccessManager.cpp  RestAccessManager.h  Tipos.h  utils.cpp  utils.h
